nullaway_error_dfa2335d-f39c-410d-aec3-88edd15d1fb3.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:909: error: [NullAway] dereferenced expression applications is @Nullable
                    for (Application application : applications.getRegisteredApplications()) {
                                                               ^
